--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,13 @@ h5 {
   font-size: 20px;
 }
 
-p {
-  /* font-size: 18px; */
-  /* text-align: start; */
+@media screen and (max-width: 480px) {
+  .homeimg,
+  .img {
+    border: black solid 2px;
+    border-radius: 20px;
+    display: block;
+    width: 100%;
+    height: 1000%;
+  }
 }
