--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,25 @@ h5 {
   font-size: 20px;
 }
 
+.text-note {
+  font-size: 20px;
+  margin: 30px;
+  display: block;
+  justify-content: end;
+  align-items: flex-end;
+}
+
+.headerTitle {
+  margin: 10px;
+  color: rgb(19, 131, 159);
+}
+
+.ali {
+  display: flex;
+  justify-content: flex-start;
+  margin: auto;
+}
+
 @media screen and (max-width: 480px) {
   .homeimg,
   .img {
@@ -182,6 +201,6 @@ h5 {
     border-radius: 20px;
     display: block;
     width: 100%;
-    height: 1000%;
+    height: 100%;
   }
 }
